Refactoring locator previews.